--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -14,13 +14,19 @@ main {
     align-items: center;
 }
 
+main>div {
+    padding: 20px;
+}
+
 h1 {
     font-size: 2em;
     margin: 0;
 }
 
 p {
-    color: rgb(0 0 0 / 76%);
+    font-size: 0.92em;
+    line-height: 1.35em;
+    color: rgb(0 0 0 / 70%);
     margin: 0.6em 0 1.2em;
 }
 
@@ -28,10 +34,11 @@ button {
     background-color: green;
     border: 1px solid rgb(0 0 0 / 60%);
     border-radius: 4px;
-    padding: 10px;
+    padding: 12px;
     width: 100%;
     text-align: center;
-    font-size: 0.86em;
+    font-size: 0.9em;
+    letter-spacing: 2px;
     color: white;
     cursor: pointer;
 }
