--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -30,30 +30,61 @@ p {
     margin: 0.6em 0 1.2em;
 }
 
+fieldset {
+    background: none;
+    border: none;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    padding: 0;
+    width: 100%;
+}
+
 button {
-    background-color: green;
-    border: 1px solid rgb(0 0 0 / 60%);
+    background-color: transparent;
+    border: 1px solid transparent;
     border-radius: 4px;
     padding: 12px;
     width: 100%;
     text-align: center;
     font-size: 0.9em;
-    letter-spacing: 2px;
-    color: white;
+    letter-spacing: 1px;
+    color: inherit;
     cursor: pointer;
+    overflow: hidden;
 }
 
 button:active {
     transform: translateY(2px);
 }
 
+button:active::after {
+    background-color: rgb(0 0 0 / 12%);
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+}
+
 button:disabled {
-    background-color: gray;
+    background-color: rgb(0 0 0 / 22%) !important;
     opacity: 0.8;
+    color: inherit !important;
     pointer-events: none;
+}
+
+button.primary {
+    background-color: green;
+    border-color: rgb(0 0 0 / 60%);
+    color: white;
 }
 
 #debug {
     margin-top: 1em;
-    height: 1.2em;
+    min-height: 1.2em;
+    font-size: 0.94em;
 }
